Issue #3000014 by mhawwari: Fix Better Login Input Label Alignment

--- a/css/theme/betterlogin.theme.css
+++ b/css/theme/betterlogin.theme.css
@@ -1,6 +1,5 @@
 #auth-box {
   padding: 50px 0 0;
-  text-align: center;
 }
 #auth-box h1#the-logo {
   text-align: center;
@@ -25,6 +24,7 @@
 #auth-box #bottom-part {
   font-size: 13px;
   padding: 15px 0 0;
+  text-align: center;
 }
 #auth-box .user-form .form-control {
   max-width: 100%;
@@ -47,4 +47,10 @@
 }
 #auth-box .user-login-form {
   text-align: left;
+}
+#auth-box .form-actions {
+  text-align: center;
+}
+#auth-box .block-social-auth-login {
+  text-align: center;
 }
